[package]
name = "apiteacher"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.26.0", features = ["fs", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deunicode = "1.4.1"
anyhow = "1.0.100"
tracing = "0.1.41"
